force-app/main/default/objects/Site_Visit__c/Site_Visit__c.object-meta.xml
<CustomObject>
    <label>Site Visit</label>
    <nameField>
        <label>Site Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>