force-app/main/default/objects/Site_Visit__c/fields/Counsellor_Information__c.field-meta.xml
<CustomField>
    <fullName>Counsellor_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counsellor Information</label>
    <referenceTo>Advisor_Information__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>